<resources>

    <!-- IMC Calculator-->
    <string name="app_name">AppYoutubeAris</string>
    <string name="write_your_name">Escribe tu nombre</string>
    <string name="accept">Aceptar</string>
    <string name="saludapp">SaludAPP</string>
    <string name="imcCalculator">IMC Calculator</string>
    <string name="menuTitle">Menu de aplicaciones</string>
    <string name="height">Altura</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="weight">Peso</string>
    <string name="calculate">Calcular</string>
    <string name="age">Edad</string>
    <string name="Title_IMC">Calculadora de IMC</string>
    <string name="IMC_result_title">Calculadora de IMC</string>
    <string name="your_result">Tu resultado</string>
    <string name="Recalculate">Re-calcular</string>
    <string name="todoapp">ToDoApp</string>

    <!-- ToDoApp -->
    <string name="ToDo_Title">Bienvenido a la App</string>
    <string name="ToDo_categories">Categorías</string>
    <string name="todo_dialog_add_task">Añade una tarea</string>
    <string name="todo_business">Negocio</string>
    <string name="todo_personal">Personal</string>
    <string name="todo_other">Otro</string>
    <string name="todo_add_task">Agregar tarea</string>
    <string name="superherolist">Superhero List</string>

</resources>