<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".imcResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/background_app"
        android:gravity="top"
        android:paddingVertical="32dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvImcResultTitle"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/IMC_result_title"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvImcResultSubtitle"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/your_result"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/llResultado"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvImcResultTitle" />


        <androidx.cardview.widget.CardView
            android:id="@+id/llResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background_component"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvImcResultSubtitle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvResultClasification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="40dp"
                    tools:text="Normal"
                    android:textColor="@color/title_text"
                    android:textSize="24sp"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/tvResultImc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="IMC"
                    android:textSize="80sp"
                    android:layout_marginVertical="20dp"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvResultDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Explicación del tipo de IMC del resultado"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:layout_marginVertical="40dp"
                    android:textColor="@color/white"
                    android:textStyle="normal" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnReCalculate"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/background_button"
            android:text="@string/Recalculate"
            android:textSize="24sp"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>